fixed lighthouse score, added meta description, updated nav links w/ font size and spacing

--- a/style.css
+++ b/style.css
@@ -9,3 +9,14 @@ body {
     font-size: 16px;
 }
 
+nav ul {
+    display: flex;
+    flex-direction: flex-row;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.nav-link {
+    font-size: 1.5em;
+    text-decoration: none;
+}
